# fred

./: .gitignore  Cargo.toml  README.md
fred/: Cargo.toml
fred-launcher/: Cargo.toml
fred-launcher/src/: main.rs
fred-macro/: Cargo.toml
fred-macro/src/: lib.rs
fred/.cargo/: config.toml
fred/src/: lib.rs  logging.rs  offsets.rs
fred/src/hooking/: detail.rs  legacy.rs  mod.rs  tests.rs
fred/src/patches/: fps.rs  fs.rs  mod.rs  widescreen.rs
fred/src/win/: mod.rs
