[package]
name = "fred-launcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# winapi = {version = "0.3.9", features = ["winuser", "winbase", "minwindef", "libloaderapi", "winnt", "memoryapi", "processthreadsapi", "synchapi", "handleapi","impl-default"] } 
windows-sys = {version = "0.48.0", features = ["Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader","Win32_System_Diagnostics_Debug","Win32_System_Memory", "Win32_System_Threading", "Win32_Foundation", "Win32_Security"]}