[package]
name = "fred"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fred-macro = { path = "../fred-macro" }
winapi = {version = "0.3.9", features = ["consoleapi", "minwindef", "libloaderapi", "winnt", "memoryapi", "processthreadsapi"] } 
detours-sys = { git = "https://github.com/svark/detours.git", rev = "040bf24", features  = ["buildtime_bindgen"] }
zydis = { version = "4.0.0-beta.2", features = ["encoder"] }
libc = "0.2"
libc-stdhandle = "0.1.0"
once_cell = "1.18.0"

[lib]
crate-type = ["dylib"]