[package]
name = "fred"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fred-macro = { path = "../fred-macro" }
windows-sys = {version = "0.48.0", features = ["Win32_System_SystemServices", "Win32_System_LibraryLoader", "Win32_Foundation", "Win32_System_Console", "Win32_System_Threading", "Win32_System_Kernel", "Win32_System_Memory"] }
detours-sys = { git = "https://github.com/svark/detours.git", rev = "040bf24", features  = ["buildtime_bindgen"] }
zydis = { version = "4.0.0-beta.2", features = ["encoder"] }
libc = "0.2"
libc-stdhandle = "0.1.0"
once_cell = "1.18.0"
sunset = { git = "https://github.com/itsmeft24/sunset" }

[lib]
crate-type = ["dylib"]